--- a/netpricedemo/pom.xml
+++ b/netpricedemo/pom.xml
@@ -68,6 +68,17 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.spockframework</groupId>
+    <artifactId>spock-core</artifactId>
+    <version>1.0-groovy-2.4</version>
+   <!--  <scope>test</scope> -->
+</dependency>
+<dependency>
+    <groupId>org.codehaus.groovy</groupId>
+    <artifactId>groovy-all</artifactId>
+    <!-- <scope>test</scope> -->
+</dependency>
 		
 		<dependency>
     <groupId>org.apache.logging.log4j</groupId>
@@ -85,15 +96,27 @@
    <!--  <version>2.7</version> -->
 </dependency>
 	</dependencies>
-
 	<build>
+	<pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+   				 <groupId>org.codehaus.gmavenplus</groupId>
+   				 <artifactId>gmavenplus-plugin</artifactId>
+    			<version>1.5</version>
+    		<executions>
+      		  <execution>
+           		<goals>
+               		 <goal>compile</goal>
+               		 <goal>testCompile</goal>
+            	</goals>
+        	</execution>
+     	</executions>
+		</plugin>
 		</plugins>
-	</build>
-
-
+		</pluginManagement>
+		</build>
 </project>
